--- a/index.html
+++ b/index.html
@@ -34,5 +34,12 @@
             </div>
         </div>
     </header>
+    <main>
+        <section class="banner">
+            <span>Sobre nós</span>
+            <h1>Por que somos diferentes?</h1>
+            <p>Nós focamos nos detalhes de tudo que fazemos. Tudo para ajudar as empresas de todo o mundo a se concentrarem naquilo que é realmente importante para elas.</p>
+        </section>
+    </main>
 </body>
 </html>
