--- a/index.html
+++ b/index.html
@@ -67,6 +67,17 @@
                 </div>
             </div>
         </section>
+
+        <section class="talentos">
+            <div class="container">
+                <div class="talentos-content">
+                    <span>Vagas abertas!</span>
+                    <h2>Estamos procurando por talentos</h2>
+                    <p>Somos uma equipe 100% remota com pessoas do Brasil inteiro.</p>
+                    <img src="img/talentos.png" alt="Pessoas reunidas em uma mesa.">
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
