--- a/index.html
+++ b/index.html
@@ -78,6 +78,55 @@
                 </div>
             </div>
         </section>
+
+        <section class="vagas">
+            <div class="container">
+                <div class="vagas-content">
+                    <div class="vagas-card">
+                        <h2>Design</h2>
+                        <div class="vagas-subcard">
+                            <p>Product Designer</p>
+                            <div class="vagas-descricao">
+                                <p>Full-time</p>
+                                <p>Faixa salarial: R$7.000</p>
+                            </div>
+                        </div>
+                        <div class="vagas-subcard">
+                            <p>UX Designer</p>
+                            <div class="vagas-descricao">
+                                <p>Full-time</p>
+                                <p>Faixa salarial: R$6.000</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="vagas-card">
+                        <h2>Desenvolvimento de Software</h2>
+                        <div class="vagas-subcard">
+                            <p>Desenvolvedor(a) iOS</p>
+                            <div class="vagas-descricao">
+                                <p>Full-time</p>
+                                <p>Faixa salarial: R$8.000</p>
+                            </div>
+                        </div>
+                        <div class="vagas-subcard">
+                            <p>Desenvolvedor(a) Front-end</p>
+                            <div class="vagas-descricao">
+                                <p>Full-time</p>
+                                <p>Faixa salarial: R$7.000</p>
+                            </div>
+                        </div>
+                        <div class="vagas-subcard">
+                            <p>Desenvolvedor(a) Back-end</p>
+                            <div class="vagas-descricao">
+                                <p>Full-time</p>
+                                <p>Faixa salarial: R$8.000</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
