--- a/index.html
+++ b/index.html
@@ -127,6 +127,20 @@
                 </div>
             </div>
         </section>
+
+        <section class="depoimentos">
+            <div class="container">
+                <div class="depoimentos-content">
+                    <span>Veja o que nossos colaboradores falam sobre nós</span>
+                    <h2>OptimusTech se importa com a saúde dos seus colaboradores e sempre procura nos dar todo tipo de auxílio possível.</h2>
+                    <div class="perfil">
+                        <img src="img/perfil.png" alt="Mulher usando computador">
+                        <p class="nome-depoimentos">Júlia Castro</p>
+                        <p class="profissao-depoimentos">Desenvolvedora Web</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
