--- a/index.html
+++ b/index.html
@@ -142,5 +142,19 @@
             </div>
         </section>
     </main>
+    <footer class="rodape">
+        <div class="container">
+            <div class="rodape-content">
+                <h2>Acompanhe as nossas oportunidades</h2>
+                <p>Seja o primeiro a saber quando novas vagas serão abertas!</p>
+                <div class="rodape-email">
+                    <input type="text" placeholder="Seu e-mail">
+                    <button>Cadastrar</button>
+                </div>
+                
+                <p class="copyright">© 2022 OspantimusTech. Todos os direitos reservados.</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
