--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
                         </a>
                     </div>
                     <div class="menu">
-                        <ul>
+                        <i class="fa-solid fa-bars" id="menu-hamburguer"></i>
+                        <ul class="menu-nav">
                             <li><a href="/">Home</a></li>
                             <li><a href="/">Produtos</a></li>
                             <li><a href="/">Rescursos</a></li>
@@ -132,7 +133,7 @@
             <div class="container">
                 <div class="depoimentos-content">
                     <span>Veja o que nossos colaboradores falam sobre nós</span>
-                    <h2>OptimusTech se importa com a saúde dos seus colaboradores e sempre procura nos dar todo tipo de auxílio possível.</h2>
+                    <h2>"OptimusTech se importa com a saúde dos seus colaboradores e sempre procura nos dar todo tipo de auxílio possível."</h2>
                     <div class="perfil">
                         <img src="img/perfil.png" alt="Mulher usando computador">
                         <p class="nome-depoimentos">Júlia Castro</p>
@@ -156,5 +157,9 @@
             </div>
         </div>
     </footer>
+
+    <script src="https://kit.fontawesome.com/dc545d7b30.js" crossorigin="anonymous"></script>
+    <script src="js/menu.js"></script>
 </body>
+
 </html>
